--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,17 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --text-color-light: #F1B2CE;
+  --title-color: #DB00FF;
+  --button-border-hover: 1px solid rgba(255, 0, 112, 0.40);
+  --title-shadow: 4px 4px 0px #FF0070;
+  background-image: url(../images/cover-image-dark.png);
 }
+
+.theme_dark .header__mark {
+  display: block;
+}
+
+
