--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,289 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--break-medium, 40px);
+  background-image: url(../images/cover-image-dark.png);
+  background-color: var(--background-color, #000028);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  font-weight: var(--font-weight, 400);
 }
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  min-block-size: 375px;
+  padding: var(--break-small, 10px);
+  block-size: 100vb;
+}
+
+.header__mark {
+  position: absolute;
+  color: var(--accent-color, #FF0070);
+  inset-inline-end: 38px;
+  inset-block-start: 10px;
+  line-height: 138.889%;
+  text-transform: uppercase;
+  font: inherit;
+}
+
+.header__mark::after {
+  content: "";
+  display: block;
+  position: absolute;
+  inset-inline-end: -19px;
+  inset-block-start: 10px;
+  background-color: var(--accent-color, #FF0070);
+  filter: drop-shadow(0px 0px 4px var(--accent-color, #FF0070));
+  inline-size: 9px;
+  block-size: 9px;
+  border-radius: 50%;
+}
+
+.header__theme-menu {
+  align-self: center;
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--break-small, 10px);
+  list-style-type: none;
+}
+
+.header__theme-menu-button {
+  padding: 0 13px;
+  background-color: transparent;
+  cursor: pointer;
+  appearance: none;
+  font-family: var(--font-family, sans-serif);
+  color: var(--accent-color, #FF0070);
+  font-size: var(--font-size, 18px);
+  border: 1px solid transparent;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--accent-color, #FF0070);
+}
+
+.header__theme-menu-button:hover {
+  border: var(--button-border-hover, 1px solid rgba(255, 0, 112, 0.40));
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid currentColor;
+}
+
+.decor::before,
+.decor::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decor::before {
+  border-inline-start: 1px solid var(--accent-color, #FF0070);
+  border-block-end: 1px solid var(--accent-color, #FF0070);
+  inset-inline-start: var(--break-small, 10px);
+  inset-block-end: var(--break-small, 10px);
+}
+
+.decor::after {
+  border-inline-end: 1px solid var(--accent-color, #FF0070);
+  border-block-start: 1px solid var(--accent-color, #FF0070);
+  inset-inline-end: var(--break-small, 10px);
+  inset-block-start: var(--break-small, 10px);
+}
+
+.header__title {
+  font-size: var(--title-size);
+  color: var(--title-color, #DB00FF);
+  text-shadow: var(--title-shadow, 4px 4px 0px #FF0070);
+  font-weight: var(--font-weight-bold, 700);
+  line-height: 82.5%;
+}
+
+.title-decor {
+  background-color: var(--accent-color, #FF0070);
+  color: var(--text-color-dark, #000028);
+  font-weight: var(--font-weight-bold, 700);
+  font-family: inherit;
+  line-height: var(--line-height, 130%);
+}
+
+.header__text {
+  max-block-size: 117px;
+  min-inline-size: 355px;
+  display: block;
+  align-self: center;
+  justify-self: flex-end;
+}
+
+.main {
+  display: grid;
+  padding: var(--break-small, 10px);
+}
+
+.section__title {
+  font: inherit;
+  color: var(--accent-color, #FF0070);
+  font-weight: var(--font-weight-bold, 700);
+}
+
+.section__content {
+  gap: 20px;
+}
+
+.section__subtitle-bold {
+  font-size: 18px;
+  font-weight: var(--font-weight-bold, 700);
+}
+
+.section__subtitle-normal {
+  font-weight: var(--font-weight, 400);
+}
+
+.section__text {
+  color: var(--text-color-light, #F1B2CE);
+}
+
+.link {
+  color: var(--text-color-light, #F1B2CE);
+  text-shadow: 2px 2px 0 var(--accent-color, #FF0070);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.link:hover {
+  border-block-end: 1px solid currentColor;
+}
+
+.link:focus-visible {
+  border: 1px solid currentColor;
+  color: var(--text-color-light, #F1B2CE)
+}
+
+.pictures {
+  gap: var(--break-small, 10px);
+}
+
+.section__picture {
+  inline-size: 100%;
+  block-size: auto;
+}
+
+.footer {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  min-block-size: 668px;
+  block-size: 100vb;
+  padding: var(--break-small, 10px);
+}
+
+.footer__title {
+  font-size: var(--title-size);
+  color: var(--title-color, #DB00FF);
+  text-shadow: 2px 2px 0px #FF0070;
+  font-weight: var(--font-weight-bold, 700);
+  line-height: 82.5%;
+}
+
+@media (width >= 768px) {
+  .page {
+    row-gap: var(--break-medium, 60px);
+  }
+  
+  .header {
+    position: relative;
+    display: grid;
+    align-items: flex-start;
+    padding: var(--break-small, 20px);
+    block-size: 100vh;
+  }
+  
+  .header__title {
+    position: relative;
+    margin-inline-start: -25px;
+
+  }
+  
+  .header__text {
+    block-size: 117px;
+    inline-size: 364px;
+    margin-block-end: 31px;
+  }
+
+  .why {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: var(--break-small, 10px);
+  }
+  
+  .what {
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    gap: 20px;
+  }
+  
+  .how {
+    grid-template-columns: 1fr 2fr;
+  }
+  
+  .pictures {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto min(192px, 26vi) min(230px, 31vi) min(318px, 42vi);
+    grid-column-end: span 3;
+  }
+
+  .section__picture {
+    block-size: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .section__picture:first-of-type,
+  .section__picture:last-of-type {
+    grid-column-end: span 2;
+  }
+
+  .section__picture:nth-of-type(2),
+  .section__picture:nth-of-type(3) {
+    grid-row-end: span 2;
+  }
+
+  
+}
+
+@media (768px <= width < 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+    flex-direction: row;
+  }
+
+  .header__text {
+    block-size: 71px;
+    inline-size: 491px;
+    margin-block-end: 20px;
+  }
+
+  .what {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+  }
+  }
