--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,31 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+--accent-color: #FF0070;
+--title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+--title-color: #DB00FF;
+--title-shadow: 4px 4px 0px #FF0070;
+--font-family: 'IBM Plex Mono';
+--font-size: 18px;
+--font-weight: 400;
+--line-height: 130%;
+--font-weight-bold: 700;
+--break-small: 10px;
+--break-medium: 40px;
+--break-large: 50px;
+--button-border-hover: 1px solid rgba(255, 0, 112, 0.40);
+--text-color-dark: #000028;
+--text-color-light: #F1B2CE;
+--background-color: #000028;
+
+}
+
+@media (width >= 768px) {
+  :root {
+    --title-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --break-small: 20px;
+    --break-medium: 60px;
+    --break-large: 80px;
+  }
+}
