--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --background-color: #000028;
+  --background-color: #00183f;
   --accent-color: #FF0070;
   --text-color-light: #F1B2CE;
   --title-color: #DB00FF;
@@ -20,6 +20,10 @@
 
 .theme_dark .header__mark {
   display: block;
+}
+
+.theme_dark .header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
 }
 
 
