--- a/styles/dark.css
+++ b/styles/dark.css
@@ -26,4 +26,8 @@
   border: 1px solid var(--accent-color);
 }
 
+.theme_dark .header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.4);
+  cursor: pointer;
+}
 
