--- a/styles/style.css
+++ b/styles/style.css
@@ -19,12 +19,14 @@
 .header {
   display: grid;
   grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 1fr;
   align-items: center;
   justify-content: space-between;
   position: relative;
   min-block-size: 668px;
   padding: var(--break-small, 10px);
   block-size: 100vh;
+  margin-block-end: 50px;
 }
 
 @supports (block-size: 100dvb) {
@@ -161,9 +163,12 @@
   font: inherit;
   color: var(--accent-color, #FF0070);
   font-weight: var(--font-weight-bold, 700);
+  min-inline-size: 236px;
 }
 
 .section__content {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -176,8 +181,19 @@
   font-weight: var(--font-weight, 400);
 }
 
+.section__paragraph {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--break-small);
+}
+
 .section__text {
   color: var(--text-color-light, #F1B2CE);
+  display: flex;
+  flex-direction: column;
+  gap: var(--break-small, 10px);
+  font-size: var(--font-size, 18px);
+  line-height: var(--line-height, 130%);
 }
 
 .link {
@@ -203,6 +219,7 @@
 .section__picture {
   inline-size: 100%;
   block-size: auto;
+  margin-block-end: 40px;
 }
 
 .footer {
@@ -272,31 +289,43 @@
   }
   
   .pictures {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto min(192px, 26vi) min(230px, 31vi) min(318px, 42vi);
-    grid-column-end: span 3;
+    gap: var(--break-small);
+    grid-template:
+    "title title title"
+    "image1 image1 image2"
+    "image3 image4 image2"
+    "image3 image5 image5"
   }
 
-  .section__picture {
-    block-size: 100%;
-    object-fit: cover;
-    object-position: center;
+  .section__subtitle-bold {
+    grid-area: title;
   }
 
-  .section__picture:first-of-type,
-  .section__picture:last-of-type {
-    grid-column: span 2;
+  .section__picture:nth-child(2) {
+    grid-area: image1;
   }
 
-  .section__picture:nth-of-type(2),
-  .section__picture:nth-of-type(3) {
-    grid-row: span 2;
+  .section__picture:nth-child(3) {
+    grid-area: image2;
+  }
+
+  .section__picture:nth-child(4) {
+    grid-area: image3;
+  }
+
+  .section__picture:nth-child(5) {
+    grid-area: image4;
+  }
+
+  .section__picture:nth-child(6) {
+    grid-area: image5;
   }
 }
 
   @media (width >= 1024px) {
     .header {
-      min-block-size: 640px;
+      margin-block-end: 6%;
+      grid-template-rows: 40% 20% 40%;
     }
 
     .header__theme-menu {
@@ -308,8 +337,58 @@
       flex-direction: row;
     }
     
-    .content-section {
+    .header__title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+
+    .header__text {
+      padding: 0;
+    }
+
+    .section__title {
+      max-width: 315px;
+    }
+    
+    .pictures {
+      gap: var(--break-small);
+      grid-template:
+      "title title title"
+      "image1 image1 image2"
+      "image3 image4 image2"
+      "image3 image5 image5"
+    }
+
+    .section__subtitle-bold {
+      grid-area: title;
+    }
+
+    .section__picture:nth-child(2) {
+      grid-area: image1;
+    }
+
+    .section__picture:nth-child(3) {
+      grid-area: image2;
+    }
+
+    .section__picture:nth-child(4) {
+      grid-area: image3;
+    }
+
+    .section__picture:nth-child(5) {
+      grid-area: image4;
+    }
+
+    .section__picture:nth-child(6) {
+      grid-area: image5;
+    }
+    
+    .what {
+      display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: var(--break-small);
+    }
+
+    .footer__title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     }
   }
