--- a/styles/dark.css
+++ b/styles/dark.css
@@ -11,7 +11,10 @@
   */
   --background-color: #000028;
   --accent-color: #FF0070;
-  --text-color-light: #F1B2CE;
+  --menu-text-color: #ff0070;
+  --section-title-color: #FF0070;
+  --text-color-dark: #000028;
+  --text-color-primary: #F1B2CE;
   --title-color: #DB00FF;
   --button-border-hover: 1px solid rgba(255, 0, 112, 0.40);
   --title-shadow: 4px 4px 0px #FF0070;
@@ -35,7 +38,9 @@
   .page {
     --background-color: #000028;
     --accent-color: #FF0070;
-    --text-color-light: #F1B2CE;
+    --section-title-color: #FF0070;
+    --text-color-dark: #000028;
+    --text-color-primary: #F1B2CE;
     --title-color: #DB00FF;
     --button-border-hover: 1px solid rgba(255, 0, 112, 0.40);
     --title-shadow: 4px 4px 0px #FF0070;
