--- a/styles/light.css
+++ b/styles/light.css
@@ -11,10 +11,13 @@
   */
   --background-color: #fff1f7;
   --accent-color: #FF8DCB;
-  --text-color: #353430;
+  --text-color-primary: #353430;
+  --menu-text-color: #353430;
+  --section-title-color: #353430;
+  --text-color-dark: #353430;
   --title-color: #FFc2E6;
   --button-border-hover: 1px solid rgba(50,49, 45, 0.40);
-  --title-shadow: 4px 4px 0px #FF0070;
+  --title-shadow: 4px 4px 0px #Ff8dcb;
   background-image: url(../images/cover-image-light.png);
 }
 
@@ -22,15 +25,44 @@
   display: none;
 }
 
+.theme_light .header__mark {
+  display: none;
+}
+
+.theme_light .title-decor {
+  color: currentColor;
+}
+
+.theme_light .section__title {
+  color: curentColor;
+}
+
 .theme_light .header__theme-menu-button_active {
   border: 1px solid var(--text-color);
 }
+
+@media (1024px <= width) {
+  @media (prefers-color-scheme: light) {
+    .header__title,
+    .footer__title {
+      text-shadow: 4px 4px 0 #ff0070;
+    }
+  }
+
+  .page.theme_light .header__title,
+  .page.theme_light .footer__title {
+    text-shadow: 4px 4px 0 #ff0070;
+  }
+  }
 
 @media (prefers-color-scheme: light) {
   :root {
     --background-color: #fff1f7;
   --accent-color: #FF8DCB;
-  --text-color: #353430;
+  --text-color-primary: #353430;
+  --menu-text-color: #353430;
+  --section-title-color: #353430;
+  --text-color-dark: #353430;
   --title-color: #FFc2E6;
   --button-border-hover: 1px solid rgba(50,49, 45, 0.40);
   --title-shadow: 4px 4px 0px #FF0070;
