--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,12 @@
   display: flex;
   flex-direction: column;
   row-gap: 40px;
-  background-image: url("../images/cover-image-dark.png");
   background-color: var(--background-color, #000028);
+  background-image: url(../images/cover-image-dark.png);
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat;
   font-family: var(--font-family, monospace);
   font-size: var(--font-size, 18px);
   font-weight: var(--font-weight, 400);
@@ -24,6 +24,7 @@
   padding: 10px;
   block-size: 100vh;
   color: var(--menu-text-color, #ff0070);
+
 }
 
 @supports (block-size: 100dvb) {
@@ -38,7 +39,7 @@
   align-items: center;
   column-gap: 10px;
   color: var(--accent-color, #FF0070);
-  inset-inline-end: 40px;
+  inset-inline-end: 38px;
   inset-block-start: 10px;
   line-height: 138.889%;
   text-transform: uppercase;
@@ -47,16 +48,14 @@
 
 .header__mark::after {
   content: "";
-  position: absolute;
   display: block;
   background-color: var(--accent-color, #FF0070);
   filter: drop-shadow(0px 0px 4px var(--accent-color, #FF0070));
   inline-size: 9px;
   block-size: 9px;
   border-radius: 50%;
-  inset-inline-end: 0;
-  inset-block-start: 50%;
-  margin: -5px -20px 0 0;
+  inset-inline-end: 8px;
+  inset-block-start: -18px;
 }
 
 .decor::before,
@@ -163,8 +162,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  row-gap: 50px;
+  padding: 0 10px;
+  row-gap: 40px;
 }
 
 .section__title {
@@ -180,7 +179,7 @@
 .section__content {
   display: flex;
   flex-direction: column;
-  gap: var(--section-gap, 20px);
+  gap: 10px;
 }
 
 .section__subtitle-bold {
@@ -203,7 +202,7 @@
   color: var(--text-color-primary, #F1B2CE);
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  
   font-size: var(--font-size, 18px);
   line-height: var(--line-height, 130%);
 }
