--- a/styles/light.css
+++ b/styles/light.css
@@ -41,6 +41,32 @@
   text-shadow: 2px 2px #Ff8dcb;
 }
 
+@media (prefers-color-scheme: light) {
+  .page {
+    --background-color: #fff1f7;
+  --accent-color: #FF8DCB;
+  --text-color-primary: #353430;
+  --menu-text-color: #353430;
+  --section-title-color: #353430;
+  --text-color-dark: #353430;
+  --title-color: #FFc2E6;
+  --button-border-hover: 1px solid rgba(50,49, 45, 0.40);
+  --title-shadow: 4px 4px 0px #Ff8dcb;
+  background-image: url(../images/cover-image-light.png);
+  }
+
+  .header__mark {
+    display: none;
+  }
+  
+  .theme_light .header__theme-menu-button_active {
+    border: 1px solid var(--text-color);
+  }
+
+  .header__theme-menu-button:hover {
+    outline: 1px solid rgba(50, 49, 45, 0.4);
+  }
+
 @media (1024px <= width) {
   @media (prefers-color-scheme: light) {
     .header__title,
@@ -55,31 +81,7 @@
   }
   }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --background-color: #fff1f7;
-  --accent-color: #FF8DCB;
-  --text-color-primary: #353430;
-  --menu-text-color: #353430;
-  --section-title-color: #353430;
-  --text-color-dark: #353430;
-  --title-color: #FFc2E6;
-  --button-border-hover: 1px solid rgba(50,49, 45, 0.40);
-  --title-shadow: 4px 4px 0px #Ff8dcb;
-  background-image: url(../images/cover-image-light.png);
-  }
 
-  .theme_light .header__mark {
-    display: none;
-  }
-  
-  .theme_light .header__theme-menu-button_active {
-    border: 1px solid var(--text-color);
-  }
-
-  .header__theme-menu-button:hover {
-    outline: 1px solid rgba(50, 49, 45, 0.4);
-  }
 }
 
 
